--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -7,6 +7,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+html {
+  background: transparent
+}
+
 h1 {
   font-weight: 300;
   color: #ffffff;
@@ -65,7 +69,30 @@ table {
   text-align: left;
 }
 
+.sameLine {
+  display: inline-block;
+}
+
 .extent{
   color: #202020;
   fill-opacity: .5;
+}
+
+rect.bordered {
+  stroke: #E6E6E6;
+  stroke-width:2px;   
+}
+
+text.mono {
+  font-size: 7pt;
+  font-family: Consolas, courier;
+  fill: #aaa;
+}
+
+text.axis-workweek {
+  fill: #000;
+}
+
+text.axis-worktime {
+  fill: #000;
 }
