fixed some bugs, filtering on data subset and month works

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -73,6 +73,16 @@ table {
   display: inline-block;
 }
 
+.xDropdown {
+  width: 210px;
+  height: 30px;
+}
+
+.yDropdown {
+  width: 210px;
+  height: 30px;
+}
+
 .extent{
   color: #202020;
   fill-opacity: .5;
