Added hovering animation for scatter/bar, also sorting

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -96,7 +96,7 @@ rect.bordered {
 text.mono {
   font-size: 7pt;
   font-family: Consolas, courier;
-  fill: #aaa;
+  fill: #FFFFFF;
 }
 
 text.axis-workweek {
