Added list of subreddits from which you can toggle in the graph

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -27,6 +27,14 @@ h2 {
   margin-bottom: 20px;
 }
 
+.toggleSubreddits {
+  border: 2px solid #ccc;
+  width: 175px;
+  height: 1000px;
+  overflow-y: scroll; 
+  color: #000000;
+}
+
 .axis path,
 .axis line {
   fill: none;
