--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -5,7 +5,7 @@ body {
   background: #202020;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
-  padding-top: 120px;
+  padding-top: 150px;
 }
 
 html {
@@ -27,7 +27,7 @@ h2 {
   font-size: 14px;
   margin-bottom: 20px;
 }
-
+/*
 .toggleSubreddits {
   border: 2px solid #ccc;
   width: 175px;
@@ -35,6 +35,7 @@ h2 {
   overflow-y: scroll; 
   color: #000000;
 }
+*/
 
 .axis path,
 .axis line {
@@ -130,4 +131,9 @@ td {
 
 .navbar-fixed-top {
   background: #202020;
+}
+
+.filter-picker2 {
+    left: 51.75% !important;
+    margin-left: -70px;
 }
