Added animation to graph creation

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -5,7 +5,7 @@ body {
   background: #202020;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
-  padding-top: 150px;
+  padding-top: 110px;
 }
 
 html {
@@ -136,4 +136,8 @@ td {
 .filter-picker {
     left: 51.75% !important;
     margin-left: -70px;
+}
+
+rect {
+  stroke: 10px;
 }
