Moved section links to bottom right

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -181,3 +181,9 @@ td.hoverTooltip, td.hoverTooltip + td.hoverTooltip + td.hoverTooltip {
 .navbar-fixed-top {
 
 }
+
+.element {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
