--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -5,7 +5,7 @@ body {
   background: #202020;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
-  padding-top: 220px;
+  padding-top: 165px;
 
   -webkit-transition: padding-top 2s; /* Safari */
   transition: padding-top 2s;
@@ -100,13 +100,13 @@ text.mono {
 }
 
 text.heatLegendLabel {
-  font-size: 8pt;
+  font-size: 7pt;
   font-family: Roboto, sans-serif;
   fill: #FFFFFF;
 }
 
 text.dayLabel {
-  font-size: 10pt;
+  font-size: 8pt;
   font-family: Roboto, sans-serif;
   fill: #FFFFFF;
 }
@@ -235,4 +235,10 @@ td.hoverTooltip, td.hoverTooltip + td.hoverTooltip + td.hoverTooltip {
 
 #toggle:checked + label:after {
   content:"Close"
+}
+
+/* Header of dropdowns */
+.popover-title {
+  color: black;
+  text-align: center;
 }
