enter after selecting two goes to compare, arrow dynamically changes to signal going to from chord. To Do: selecting two on chord leads to small multiples

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -229,7 +229,7 @@ td.hoverTooltip, td.hoverTooltip + td.hoverTooltip + td.hoverTooltip {
 }
 
 #toggle:checked + label:after {
-  content:"Go Fullscreen"
+  content:"Hide Menu"
 }
 
 /* Header of dropdowns */
@@ -242,4 +242,14 @@ td.hoverTooltip, td.hoverTooltip + td.hoverTooltip + td.hoverTooltip {
   position: fixed;
   bottom: 0%;
   right: 40%;
+}
+
+.leftScroll {
+  position: fixed;
+  right: 0;
+  bottom: 50%;
+}
+
+#arrow {
+  transform: rotate(-90deg);
 }
