Bar chart min y value = 0

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -253,3 +253,7 @@ td.hoverTooltip, td.hoverTooltip + td.hoverTooltip + td.hoverTooltip {
 #arrow {
   transform: rotate(-90deg);
 }
+
+.slider-tick, .slider-handle {
+  cursor: pointer;
+}
